assign complete